# PAVILOS

./: .gitignore  pyproject.toml  run.bat  run.ps1
docs/: RESEARCH_FINDINGS.md
docs/superpowers/plans/: 2026-06-06-pavilos-m1-core-aggregation.md  2026-06-06-pavilos-m1b-connectors-logic.md  2026-06-07-pavilos-m1c-transport.md  2026-06-07-pavilos-m1d-native-connectors.md  2026-06-07-pavilos-m2-detection.md  2026-06-07-pavilos-m3-signals-paper.md  2026-06-07-pavilos-m4-dashboard-live.md  2026-06-07-pavilos-m5a-trades-pnl.md  2026-06-08-pavilos-m10-parquet-data-layer.md  2026-06-08-pavilos-m11-replay-sweep-edge.md  2026-06-08-pavilos-m12-reversion-entry.md  2026-06-08-pavilos-m13-confluence-validation.md  2026-06-08-pavilos-m6-backtest.md  2026-06-08-pavilos-m7-breadth-ccxt.md  2026-06-09-pavilos-m14-static-levels.md  (+3 more)
scripts/: _oos_window.py  _pressure_leads.py  _pressure_pilot.py  analyze.py  backtest.py  book_query.py  calibration_probe.py  capture.py  compact_lake.py  live_smoke.py  record_book.py  replay.py  run_recorder.bat  run_recorder.py  run_recorder_hidden.vbs
src/pavilos/: __main__.py
tests/fixtures/: replay_two_venues.jsonl
tests/unit/: test_aggregator.py  test_analysis.py  test_analyze_cli.py  test_atr.py  test_backtest_forward.py  test_backtest_io.py  test_backtest_runner.py  test_backtest_sweep.py  test_binance.py  test_binance_connector.py  test_bitstamp.py  test_bitstamp_connector.py  test_book_query.py  test_book_state.py  test_bybit.py  test_ccxt_connector.py  test_ccxt_pool.py  test_ccxt_worker.py  test_clusters.py  test_coinbase.py  test_combine.py  test_compaction.py  test_confidence.py  test_confluence.py  test_confluence_study.py  test_connectors_base.py  test_dashboard_state.py  test_deps_importable.py  test_detection_models.py  test_detector.py  test_engine.py  test_kraken.py  test_kraken_book.py  test_kraken_connector.py  test_level_history.py  test_lifecycle.py  test_m11_adversarial_probe.py  test_m11_adversarial_probe2.py  test_models.py  test_normalize.py  (+21 more)
(+57 files in other folders)
