[project]
name = "pavilos"
version = "0.2.0"
description = "Multi-exchange BTC order-book aggregation and support/resistance trading engine"
requires-python = ">=3.13"
dependencies = [
    "websockets>=12",
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "ccxt>=4.4",
    "protobuf>=5.29",   # required by ccxt.pro for MEXC's protobuf-encoded WS order book
    "pyarrow>=16",      # Parquet writer for the raw-L2 data layer (M10)
    "duckdb>=1.0",      # embedded SQL query over the Parquet lake (M10)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
